--- a/aboutus.html
+++ b/aboutus.html
@@ -90,7 +90,7 @@
                 </h1>
                 <p class="mb-8 leading-relaxed">I am a engineering student at Guru Nanak dev engineering colledge Ludhiana.I am in my 3rd year and i pursuring Btech in computer science and engineering</p>
                 <div class="flex justify-center">
- <a href="https://github.com/SanchitGG" ><button   class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Github</button></a>
+ <a href="https://github.com/Dhruv-sharma2003" ><button   class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Github</button></a>
  
                 </div>
             </div>
