--- a/contactus.html
+++ b/contactus.html
@@ -56,7 +56,7 @@
                     viewBox="0 0 24 24">
                     <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                 </svg>
-                <span class="ml-3 text-xl text-black-200">Sanchit Garg</span>
+                <span class="ml-3 text-xl text-black-200">Dhruv Sharma</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a href="index.html" class="mr-5 hover:text-white-900 hover:underline transition duration-300 text-black-200">Home</a>
@@ -99,7 +99,7 @@
             <button class="flex mx-auto text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">Button</button>
           </div>
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-            <a class="text-red-500">sanchitgg2005@gmail.com</a>
+            <a class="text-red-500">Sharmadhruv102003@gmail.com</a>
               <br>Ludhiana, Punjab
             </p>
             <span class="inline-flex">
